# betterclaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.worker  FEATURE_PARITY.md  README.md  README.zh-CN.md  betterclaw.bash  betterclaw.fish  betterclaw.zsh  build.rs  clippy.toml  compressor_prompts.json  docker-compose.yml  eval_config.json  eval_config_nemotron3n4b.json  eval_config_nemotron3n4b_crow9bheretic46.json  eval_config_nemotron3n4b_granite4htiny.json  eval_config_nemotron3n4b_ministral314b.json  eval_config_nemotron3n4b_qwen3535ba3b.json  eval_config_nemotron3n4b_qwen359b.json  eval_intermediate.json  hyperparams.json  prompt_eval_db.jsonl  providers.json
.cargo/: config.toml
.claude/commands/: add-sse-event.md  add-tool.md  fix-issue.md  pr-shepherd.md  respond-pr.md  review-crate.md  review-pr.md  ship.md  trace.md
.claude/rules/: database.md  review-discipline.md  safety-and-sandbox.md  skills.md  testing.md  tools.md
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/scripts/: create-labels.sh  pr-labeler.sh
.github/workflows/: claude-review.yml  code_style.yml  coverage.yml  e2e.yml  test.yml  (+2 more)
deploy/: betterclaw.service  cloud-sql-proxy.service  env.example  setup.sh
docs/: BUILDING_CHANNELS.md  LLM_PROVIDERS.md  TELEGRAM_SETUP.md  architecture.md  model-traces.md  provider-engine.md  roadmap.md  tidepool.md  todo.md
examples/: eval_config.template.json  eval_config_stub.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_config_env.rs  fuzz_leak_detector.rs  fuzz_safety_sanitizer.rs  fuzz_safety_validator.rs  fuzz_tool_params.rs
migrations/: V11__conversation_unique_indexes.sql  V12__job_token_budget.sql  V8__settings.sql
registry/: _bundles.json
scripts/: build-all.sh  check-boundaries.sh  dev-setup.sh  generate_tidepool_bindings.sh  run_tidepool_pair.sh  tidepool_register.sh  update-buzz.sh  watch-buzz.sh
src/: NETWORK_SECURITY.md  agent.rs  app.rs  boot_screen.rs  bootstrap.rs  channel.rs  db.rs  error.rs  event.rs  lib.rs  logging.rs  main.rs  memory.rs  model.rs  routine.rs  runtime.rs  service.rs  settings.rs  skill.rs  testing.rs  thread.rs  timezone.rs  tool.rs  tracing_fmt.rs  turn.rs  update.rs  util.rs  web.rs  workspace.rs
tests/: compat_hubs.rs  config_round_trip.rs  e2e_advanced_traces.rs  e2e_attachments.rs  e2e_builtin_tool_coverage.rs  e2e_routine_heartbeat.rs  e2e_spot_checks.rs  e2e_status_events.rs  e2e_worker_coverage.rs  e2e_workspace_coverage.rs  heartbeat_integration.rs  html_to_markdown.rs  module_init_integration.rs  openai_compat_integration.rs  pairing_integration.rs  provider_chaos.rs  relay_integration.rs  sighup_reload_integration.rs  support_unit_tests.rs  telegram_auth_integration.rs  tool_schema_validation.rs  wasm_channel_integration.rs  web_api.rs  wit_compat.rs  workspace_integration.rs  ws_gateway_integration.rs
web/: app.js  index.html  style.css
wit/: channel.wit  tool.wit
wix/: main.wxs
(+392 files in other folders)
