[package]
name = "betterclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
futures-util = "0.3"
libsql = { version = "0.6", default-features = false, features = ["core"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
