[package]
name = "betterclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
futures-util = "0.3"
globset = "0.4"
libsql = { version = "0.6", default-features = false, features = ["core"] }
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb-sdk = "2.0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
